Add scripts for constructing Chen mammary dataset (closes #4)

--- a/inst/ref.bib
+++ b/inst/ref.bib
@@ -8,3 +8,29 @@
   year={2019},
   publisher={Nature Publishing Group}
 }
+
+@dataset{chen_yunshun_2017_1052871,
+  author       = {Chen, Yunshun and
+                  Pal, Bhupinder and
+                  Visvader, Jane E and
+                  Smyth, Gordon K},
+  title        = {{Data and code for "Differential methylation
+                   analysis of reduced representation bisulfite
+                   sequencing experiments using edgeR"}},
+  month        = nov,
+  year         = 2017,
+  publisher    = {Zenodo},
+  doi          = {10.5281/zenodo.1052871},
+  url          = {https://doi.org/10.5281/zenodo.1052871}
+}
+
+@Article{chen2017mammary,
+AUTHOR = { Chen, Y and Pal, B and Visvader, JE and Smyth, GK},
+TITLE = {Differential methylation analysis of reduced representation bisulfite sequencing experiments using edgeR [version 2; peer review: 2 approved, 1 approved with reservations]
+},
+JOURNAL = {F1000Research},
+VOLUME = {6},
+YEAR = {2018},
+NUMBER = {2055},
+DOI = {10.12688/f1000research.13196.2}
+}
